--- a/examples/category_classification/01_preprocessing.ipynb
+++ b/examples/category_classification/01_preprocessing.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "df_listings = pd.read_csv(\n",
-    "    \"../data/listings.csv\",\n",
+    "    \"../../data/listings.csv\",\n",
     "    converters={\n",
     "        \"category_verticals\": literal_eval,\n",
     "        \"types\": literal_eval,\n",
@@ -267,7 +267,7 @@
    ],
    "source": [
     "df_categories = pd.read_csv(\n",
-    "    \"../data/categories.csv\", converters={\"label\": literal_eval}\n",
+    "    \"../../data/categories.csv\", converters={\"label\": literal_eval}\n",
     ")\n",
     "\n",
     "if df_categories.empty:\n",
@@ -280,7 +280,7 @@
     "    df_categories[\"label\"] = df_categories.index\n",
     "    df_categories.sort_values(\"label\", ascending=True, inplace=True)\n",
     "    df_categories = df_categories[[\"label\", \"name\"]]\n",
-    "    df_categories.to_csv(\"../data/categories.csv\", index=False)\n",
+    "    df_categories.to_csv(\"../../data/categories.csv\", index=False)\n",
     "\n",
     "exp_num_categories = df_categories[\"name\"].nunique()\n",
     "num_categories = df_listings[\"category\"].nunique()\n",
@@ -330,7 +330,7 @@
     "    features=categories_features,\n",
     "    preserve_index=False,\n",
     ")\n",
-    "categories_dataset.save_to_disk(\"../data/category_classification\")"
+    "categories_dataset.save_to_disk(\"../../data/category_classification\")"
    ]
   }
  ],
