--- a/examples/category_classification/02_category_classification.ipynb
+++ b/examples/category_classification/02_category_classification.ipynb
@@ -103,7 +103,7 @@
     "# Load the category classification dataset\n",
     "\n",
     "category_dataset: Dataset = load_from_disk(\n",
-    "    \"../data/category_classification\"\n",
+    "    \"../../data/category_classification\"\n",
     ").shuffle(seed=random_seed)\n",
     "category_dataset.cleanup_cache_files()\n",
     "labels: list[str] = category_dataset.features[LABEL_COLUMN].names\n",
