--- a/examples/category_classification/01_preprocessing.ipynb
+++ b/examples/category_classification/01_preprocessing.ipynb
@@ -266,9 +266,7 @@
     }
    ],
    "source": [
-    "df_categories = pd.read_csv(\n",
-    "    \"../../data/categories.csv\", converters={\"label\": literal_eval}\n",
-    ")\n",
+    "df_categories = pd.read_csv(\"../../data/categories.csv\", converters={\"label\": literal_eval})\n",
     "\n",
     "if df_categories.empty:\n",
     "    # construct categories dataset with numeric labels\n",
