--- a/examples/category_classification/02_category_classification.ipynb
+++ b/examples/category_classification/02_category_classification.ipynb
@@ -102,9 +102,9 @@
    "source": [
     "# Load the category classification dataset\n",
     "\n",
-    "category_dataset: Dataset = load_from_disk(\n",
-    "    \"../../data/category_classification\"\n",
-    ").shuffle(seed=random_seed)\n",
+    "category_dataset: Dataset = load_from_disk(\"../../data/category_classification\").shuffle(\n",
+    "    seed=random_seed\n",
+    ")\n",
     "category_dataset.cleanup_cache_files()\n",
     "labels: list[str] = category_dataset.features[LABEL_COLUMN].names\n",
     "label2id: dict[str, int] = {v: i for i, v in enumerate(labels)}\n",
