ruff check --fix

--- a/examples/category_classification/01_preprocessing.ipynb
+++ b/examples/category_classification/01_preprocessing.ipynb
@@ -7,11 +7,12 @@
    "outputs": [],
    "source": [
     "from ast import literal_eval\n",
-    "import pandas as pd\n",
-    "import emoji\n",
+    "\n",
+    "from datasets import ClassLabel, Features, Value\n",
     "from datasets.arrow_dataset import Dataset\n",
-    "from datasets import Features, Value, ClassLabel\n",
     "from datasets.info import DatasetInfo\n",
+    "import emoji\n",
+    "import pandas as pd\n",
     "\n",
     "pd.set_option(\"display.max_colwidth\", 256)"
    ]
