--- a/examples/category_classification/02_category_classification.ipynb
+++ b/examples/category_classification/02_category_classification.ipynb
@@ -6,26 +6,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers.models.auto.tokenization_auto import AutoTokenizer\n",
-    "from transformers.tokenization_utils import PreTrainedTokenizer\n",
     "from datasets.arrow_dataset import Dataset\n",
     "from datasets.dataset_dict import DatasetDict\n",
-    "from datasets.load import load_from_disk, load_metric\n",
-    "from transformers.trainer import Trainer\n",
-    "from transformers.training_args import TrainingArguments\n",
-    "from transformers.models.auto.modeling_auto import AutoModelForSequenceClassification\n",
-    "from transformers.models.distilbert.modeling_distilbert import DistilBertForSequenceClassification\n",
-    "from transformers.data.data_collator import DataCollatorWithPadding\n",
-    "from transformers.pipelines import pipeline\n",
+    "from datasets.load import load_from_disk\n",
     "import evaluate\n",
-    "from evaluate.visualization import radar_plot\n",
-    "from evaluate.evaluator.base import Evaluator\n",
     "from evaluate.module import EvaluationModule\n",
+    "from evaluate.visualization import radar_plot\n",
+    "from matplotlib.figure import Figure\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from optimum.onnxruntime import ORTModelForSequenceClassification\n",
     "import torch\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.figure import Figure\n",
+    "from transformers.models.auto.modeling_auto import AutoModelForSequenceClassification\n",
+    "from transformers.models.auto.tokenization_auto import AutoTokenizer\n",
+    "from transformers.models.distilbert.modeling_distilbert import DistilBertForSequenceClassification\n",
+    "from transformers.pipelines import pipeline\n",
+    "from transformers.tokenization_utils import PreTrainedTokenizer\n",
+    "from transformers.trainer import Trainer\n",
+    "from transformers.training_args import TrainingArguments\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -224,7 +222,7 @@
     "        print(f\"Batch Size: {batch_size}, Learning Rate: {learning_rate}\")\n",
     "\n",
     "        training_args = TrainingArguments(\n",
-    "            output_dir=f\"../models/checkpoints/category_classifier/batch_size_{str(batch_size)}/learn_rate_{str(learning_rate)}\",\n",
+    "            output_dir=f\"../models/checkpoints/category_classifier/batch_size_{batch_size!s}/learn_rate_{learning_rate!s}\",\n",
     "            optim=OPTIMISER_FUNCTION,\n",
     "            metric_for_best_model=BEST_METRIC,\n",
     "            learning_rate=learning_rate,\n",
@@ -278,7 +276,7 @@
     }
    ],
    "source": [
-    "model_names = [\"_\".join(path.split(sep=\"/\")[-3:]) for path in best_models.keys()]\n",
+    "model_names = [\"_\".join(path.split(sep=\"/\")[-3:]) for path in best_models]\n",
     "\n",
     "fig = figure(\"\")\n",
     "plot = radar_plot(fig=fig, data=list(best_models.values()), model_names=model_names)\n",
@@ -363,7 +361,7 @@
    "outputs": [],
    "source": [
     "title_examples = []\n",
-    "with open(\"./files/title_examples.txt\", \"r\") as title_file:\n",
+    "with open(\"./files/title_examples.txt\") as title_file:\n",
     "    title_examples = title_file.readlines()"
    ]
   },
